# mutationengine-pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STYLE_GUIDE.md  TODO.md  build.bat  clean_cmake.bat
source/common/: debug.c  debug.h  types.h
source/engine/: entity.c  entity.h  mutation_engine.c  mutation_engine.h  renderer.c  renderer.h  utils.c  utils.h
source/game/: main.c
